# rust-vs-cpp

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  conanfile.txt  notes.md  printing.md  run-cpp.sh  run-rust.sh  run.sh  setup.sh  variants.md
destructive-move-semantics/: TypicalResourceHolder.h  TypicalResourceHolder.rs
error-messages-cpp/: CMakeLists.txt  main.cpp
error-messages-rust/: Cargo.toml
error-messages-rust/src/: main.rs
fearless-concurrency-rust/: Cargo.toml
fearless-concurrency-rust/src/: main.rs
functional-iterators-cpp/: CMakeLists.txt  main.cpp
functional-iterators-rust/: Cargo.toml
functional-iterators-rust/src/: main.rs
if-we-have-time/: Synchronized.h  state-machine.rs
initialize-choice-cpp/: CMakeLists.txt  main.cpp
initialize-choice-rust/: Cargo.toml
initialize-choice-rust/src/: main.rs
iterator-invalidation-cpp/: CMakeLists.txt  main.cpp
iterator-invalidation-python/: main.py
iterator-invalidation-rust/: Cargo.toml
iterator-invalidation-rust/src/: main.rs
playground-cpp/: CMakeLists.txt  main.cpp
printing-cpp/: CMakeLists.txt  main.cpp
printing-rust/: Cargo.toml
printing-rust/src/: main.rs
requirements-cpp/: CMakeLists.txt  main.cpp
requirements-rust/: Cargo.toml
requirements-rust/src/: main.rs
state-machine-cpp/: CMakeLists.txt  main.cpp
state-machine-rust/: Cargo.toml
state-machine-rust/src/: main.rs
threads-cpp/: CMakeLists.txt  main.cpp
threads-rust/src/: main.rs
uninitialized-cpp/: CMakeLists.txt  main.cpp
uninitialized-rust/: Cargo.toml
uninitialized-rust/src/: main.rs
variants-cpp/: CMakeLists.txt  main.cpp
variants-rust/: Cargo.toml
variants-rust/src/: main.rs
