cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
project(RustVsCpp LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)

set(CMAKE_COMPILE_WARNING_AS_ERROR ON)

if(MSVC)
  add_compile_options(PRIVATE /W4 /WX)
else()
  add_compile_options(-Wall -Wextra -Wpedantic -Werror)
endif()

add_subdirectory(iterator-invalidation-cpp)
add_subdirectory(variants-cpp)
add_subdirectory(uninitialized-cpp)
add_subdirectory(initialize-choice-cpp)
add_subdirectory(printing-cpp)
add_subdirectory(requirements-cpp)
add_subdirectory(error-messages-cpp)
add_subdirectory(functional-iterators-cpp)
