cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
project(RustVsCpp LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)

set(CMAKE_COMPILE_WARNING_AS_ERROR ON)

if(MSVC)
    add_compile_options(PRIVATE /W4 /WX)
else()
    add_compile_options(-Wall -Wextra -Wpedantic -Werror)

    if("${SANITIZATION}" STREQUAL "basic")
        add_compile_options(-fsanitize=undefined,integer,nullability)
        add_link_options(-fsanitize=undefined,integer,nullability)
    elseif("${SANITIZATION}" STREQUAL "memory")
        add_compile_options(-fsanitize=memory)
        add_link_options(-fsanitize=memory)
    elseif("${SANITIZATION}" STREQUAL "address")
        add_compile_options(-fsanitize=address)
        add_link_options(-fsanitize=address)
    elseif("${SANITIZATION}" STREQUAL "thread")
        add_compile_options(-fsanitize=thread)
        add_link_options(-fsanitize=thread)
    endif()
endif()

add_subdirectory(iterator-invalidation-cpp)
add_subdirectory(variants-cpp)
add_subdirectory(uninitialized-cpp)
add_subdirectory(initialize-choice-cpp)
add_subdirectory(printing-cpp)
add_subdirectory(requirements-cpp)
add_subdirectory(error-messages-cpp)
add_subdirectory(functional-iterators-cpp)
add_subdirectory(state-machine-cpp)
add_subdirectory(playground-cpp)
add_subdirectory(threads-cpp)
